--- a/image-generator/pom.xml
+++ b/image-generator/pom.xml
@@ -29,6 +29,7 @@
 	<properties>
 		<java.version>17</java.version>
 		<SPRING_AI_VERSION>0.8.0-SNAPSHOT</SPRING_AI_VERSION>
+		<APACHE_HTTP_CLIENT>5.3.1</APACHE_HTTP_CLIENT>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -62,7 +63,6 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-<!--			<scope>runtime</scope>-->
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
@@ -84,6 +84,15 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
+
+		<!-- Needed for the HttpClient and to manage the connection pool with Open AI -->
+		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents.client5/httpclient5 -->
+		<dependency>
+			<groupId>org.apache.httpcomponents.client5</groupId>
+			<artifactId>httpclient5</artifactId>
+			<version>${APACHE_HTTP_CLIENT}</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
